Added support for armeabi-v7a-hard architecture, it seems to be buggy, because Ballfield launches but does not draw anything. To be fixed later.

--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -208,7 +208,7 @@ FirstStartMenuOptions='SettingsMenu.DummyMenu'
 
 # Enable multi-ABI binary, with hardware FPU support - it will also work on old devices,
 # but .apk size is 2x bigger (y) / (n) / (x86) / (all)
-MultiABI='armeabi-v7a'
+MultiABI='armeabi-v7a-hard'
 
 # Minimum amount of RAM application requires, in Mb, SDL will print warning to user if it's lower
 AppMinimumRAM=0
