--- a/project/jni/application/openttd-lowmem/AndroidData/openttd-1.4.0.30.cfg
+++ b/project/jni/application/openttd-lowmem/AndroidData/openttd-1.4.0.30.cfg
@@ -19,5 +19,5 @@ min_step_size = 40
 [gui]
 left_mouse_btn_scrolling = true
 osk_activation = disabled
-auto_scrolling = 2
-
+auto_scrolling = 0
+reverse_scroll = true
