OpenTyrian: Invisible game buttons

--- a/project/jni/application/opentyrian/AndroidAppSettings.cfg
+++ b/project/jni/application/opentyrian/AndroidAppSettings.cfg
@@ -21,7 +21,7 @@ AppVersionName="2.1.24"
 AppDataDownloadUrl="Data files size is 11 Mb|tyrian21-data.zip|http://sourceforge.net/projects/libsdl-android/files/OpenTyrian/tyrian21-data.zip/download|http://sites.google.com/site/xpelyax/Home/tyrian21-data.zip?attredirects=0&d=1|http://sitesproxy.goapk.com/site/xpelyax/Home/tyrian21-data.zip"
 
 # Reset SDL config when updating application to the new version (y) / (n)
-ResetSdlConfigForThisVersion=n
+ResetSdlConfigForThisVersion=y
 
 # Delete application data files when upgrading (specify file/dir paths separated by spaces)
 DeleteFilesOnUpgrade="%"
@@ -120,7 +120,7 @@ GenerateSubframeTouchEvents=
 ForceRelativeMouseMode=n
 
 # Application needs arrow keys (y) or (n), will show on-screen dpad/joystick (y) or (n)
-AppNeedsArrowKeys=n
+AppNeedsArrowKeys=y
 
 # Application needs text input (y) or (n), enables button for text input on screen
 AppNeedsTextInput=y
