--- a/.gitmodules
+++ b/.gitmodules
@@ -59,3 +59,6 @@
 [submodule "project/jni/application/xserver-debian/xserver"]
 	path = project/jni/application/xserver-debian/xserver
 	url = git@github.com:pelya/xserver.git
+[submodule "project/jni/application/uae4all2"]
+	path = project/jni/application/uae4all2
+	url = git@github.com:lubomyr/uae4all2.git
