Floating on-screen joystick, which can be enabled in .cfg file

--- a/project/jni/application/ballfield/AndroidAppSettings.cfg
+++ b/project/jni/application/ballfield/AndroidAppSettings.cfg
@@ -119,13 +119,18 @@ GenerateSubframeTouchEvents=n
 # Force relative (laptop) mouse movement mode, useful when both on-screen keyboard and mouse are needed (y) or (n)
 ForceRelativeMouseMode=n
 
-# Application needs arrow keys (y) or (n), will show on-screen dpad/joystick (y) or (n)
+# Show on-screen dpad/joystick, that will act as arrow keys (y) or (n)
 AppNeedsArrowKeys=y
+
+# On-screen dpad/joystick will appear under finger when it touches the screen (y) or (n)
+# Joystick always follows finger, so moving mouse requires touching the screen with other finger
+FloatingScreenJoystick=y
 
 # Application needs text input (y) or (n), enables button for text input on screen
 AppNeedsTextInput=y
 
 # Application uses joystick (y) or (n), the on-screen DPAD will be used as joystick 0 axes 0-1
+# This will disable AppNeedsArrowKeys option
 AppUsesJoystick=y
 
 # Application uses second on-screen joystick, as SDL joystick 0 axes 2-3 (y)/(n)
@@ -208,7 +213,7 @@ FirstStartMenuOptions='SettingsMenu.DummyMenu'
 
 # Specify architectures to compile, 'all' or 'y' to compile for all architectures.
 # Available architectures: armeabi armeabi-v7a armeabi-v7a-hard x86 mips
-MultiABI='armeabi-v7a-hard x86 mips armeabi'
+MultiABI='armeabi-v7a'
 
 # Minimum amount of RAM application requires, in Mb, SDL will print warning to user if it's lower
 AppMinimumRAM=0
