Added several .gitignore files, small fix to XSDL

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,8 @@ project/jni/application/*/libapplication*.so
 project/jni/application/src
 project/res/drawable-xhdpi/ouya_icon.png
 project/res/drawable/app_icon.png
+project/proguard-project.txt
+project/themes/converter
+
+
 
