--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,5 @@ project/jni/application/src
 project/res/drawable-xhdpi/ouya_icon.png
 project/res/drawable/app_icon.png
 project/proguard-project.txt
+project/proguard-local.cfg
 project/themes/converter
-
-
-
