--- a/project/proguard.cfg
+++ b/project/proguard.cfg
@@ -15,22 +15,27 @@
 -keep public class com.android.vending.licensing.ILicensingService
 
 -keepclasseswithmembernames class * {
-    native <methods>;
+	native <methods>;
 }
 
 -keepclasseswithmembernames class * {
-    public <init>(android.content.Context, android.util.AttributeSet);
+	public <init>(android.content.Context, android.util.AttributeSet);
 }
 
 -keepclasseswithmembernames class * {
-    public <init>(android.content.Context, android.util.AttributeSet, int);
+	public <init>(android.content.Context, android.util.AttributeSet, int);
 }
 
 -keepclassmembers enum * {
-    public static **[] values();
-    public static ** valueOf(java.lang.String);
+	public static **[] values();
+	public static ** valueOf(java.lang.String);
 }
 
 -keep class * implements android.os.Parcelable {
-  public static final android.os.Parcelable$Creator *;
+	public static final android.os.Parcelable$Creator *;
+}
+
+-keep class com.google.android.gms.games.snapshot.SnapshotMetadataEntity
+{
+	*;
 }
