--- a/project/jni/application/openarena/AndroidAppSettings.cfg
+++ b/project/jni/application/openarena/AndroidAppSettings.cfg
@@ -28,7 +28,7 @@ DeleteFilesOnUpgrade="libsdl-DownloadFinished-10.flag"
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines (that's four backslashes)^de:Text in Deutsch^ru:Text in Russian^button:Button that will open some URL:http://url-to-open/
-ReadmeText='^Readme text'
+ReadmeText=''
 
 # libSDL version to use (1.2/1.3/2.0)
 LibSdlVersion=1.2
