--- a/project/jni/application/simutrans/AndroidAppSettings.cfg
+++ b/project/jni/application/simutrans/AndroidAppSettings.cfg
@@ -23,7 +23,8 @@ InhibitSuspend=n
 # If the URL does not contain 'http://' it is treated as file from 'project/jni/application/src/AndroidData' dir -
 # these files are put inside .apk package by build system
 # Also please avoid 'https://' URLs, many Android devices do not have trust certificates and will fail to connect to SF.net over HTTPS
-AppDataDownloadUrl="!!Data pak|data.zip^!!GFX paks|paks.zip|http://sourceforge.net/projects/libsdl-android/files/Simutrans/paks.zip/download^!!MIDI music support|timidity.zip|http://sourceforge.net/projects/libsdl-android/files/timidity.zip"
+#AppDataDownloadUrl="!!Data pak|data.zip^!!GFX paks|paks.zip|http://sourceforge.net/projects/libsdl-android/files/Simutrans/paks.zip/download^!!MIDI music support|timidity.zip|http://sourceforge.net/projects/libsdl-android/files/timidity.zip"
+AppDataDownloadUrl="!!Data pak|data.zip^!!GFX paks|paks.zip^!!MIDI music support|timidity.zip|http://sourceforge.net/projects/libsdl-android/files/timidity.zip"
 
 # Video color depth - 16 BPP is the fastest and supported for all modes, 24 bpp is supported only
 # with SwVideoMode=y, SDL_OPENGL mode supports everything. (16)/(24)/(32)
@@ -44,7 +45,7 @@ NeedGles2=n
 SwVideoMode=y
 
 # Application video output will be resized to fit into native device screen (y)/(n)
-SdlVideoResize=y
+SdlVideoResize=n
 
 # Application resizing will keep 4:3 aspect ratio, with black bars at sides (y)/(n)
 SdlVideoResizeKeepAspect=n
@@ -79,10 +80,10 @@ CompatibilityHacksTouchscreenKeyboardSaveRestoreOpenGLState=
 AppUsesMouse=y
 
 # Application needs two-button mouse, will also enable advanced point-and-click features (y) or (n)
-AppNeedsTwoButtonMouse=y
+AppNeedsTwoButtonMouse=n
 
 # Show SDL mouse cursor, for applications that do not draw cursor at all (y) or (n)
-ShowMouseCursor=n
+ShowMouseCursor=y
 
 # Force relative (laptop) mouse movement mode, useful when both on-screen keyboard and mouse are needed (y) or (n)
 ForceRelativeMouseMode=n
@@ -205,7 +206,8 @@ AppSubdirsBuild=''
 AppBuildExclude=''
 
 # Application command line parameters, including app name as 0-th param
-AppCmdline='simutrans -use_workdir -screensize 800x480 -fullscreen'
+AppCmdline='simutrans -use_workdir -screensize 800x600 -fullscreen'
+#AppCmdline='simutrans -use_workdir -fullscreen'
 
 # Here you may type readme text, which will be shown during startup. Format is:
 # Text in English, use \\\\n to separate lines^de:Text in Deutsch^ru:Text in Russian, and so on (that's four backslashes, nice isn't it?)
