--- a/project/jni/application/commandergenius/AndroidAppSettings.cfg
+++ b/project/jni/application/commandergenius/AndroidAppSettings.cfg
@@ -215,7 +215,7 @@ CompiledLibraries="ogg sdl_image boost_system"
 CustomBuildScript=n
 
 # Aditional CFLAGS for application
-AppCflags='-frtti -fexceptions -finline-functions -O2 -DOGG=1 -DANDROID=1 -DBUILD_TYPE=LINUX -DTARGET_LNX=1 -Werror=strict-aliasing -Werror=cast-align -Werror=pointer-arith -Werror=address -std=c++11 -Ijni/../jni/application/commandergenius/commandergenius/lib/GsKit -Ijni/vorbis/include/vorbis'
+AppCflags='-frtti -fexceptions -finline-functions -O2 -DOGG=1 -DANDROID=1 -DBUILD_TYPE=LINUX -DTARGET_LNX=1 -DNOTYPESAVE -Werror=strict-aliasing -Werror=cast-align -Werror=pointer-arith -Werror=address -std=c++11 -Ijni/../jni/application/commandergenius/commandergenius/lib/GsKit -Ijni/vorbis/include/vorbis'
 
 # Additional LDFLAGS for application
 #AppLdflags='-ltremor'
